--- a/Отчет.md
+++ b/Отчет.md
@@ -99,6 +99,14 @@ Vision Transformer — это архитектура глубокого обуч
 - **Recall** (macro): Средняя полнота по всем классам
 - **F1-score** (macro): Гармоническое среднее Precision и Recall
 
+### 2.5. Функция потерь и регуляризация
+
+- **CrossEntropyLoss**: стандартная функция потерь для многоклассовой классификации; включает `log-softmax` и `nll_loss`, поэтому принимает необработанные логиты модели и автоматически нормализует их внутри вычисления.
+- **Без весов классов**: классы не балансировались вручную; распределение пород в Stanford Dogs относительно ровное, поэтому класс-весы не задавались.
+- **Без label smoothing**: использовалась жесткая целевая метка, чтобы не размывать редкие классы и сохранить точные вероятности.
+- **Weight decay**: 1e-4 для Adam как L2-регуляризация параметров; для SPAM weight decay не применялся, т.к. оптимизатор опирается на собственный механизм сглаживания спайков.
+- **Градиентная стабильность**: AMP с автокастом снижает численные ошибки; для SPAM дополнительно есть пороговое отслеживание "спайков" (threshold=5000) и сброс момента (`DeltaT=500`), что выступает как адаптивная защита от взрывных градиентов.
+
 ---
 
 ## 3. Результаты работы и тестирования системы
